// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component tests Main tests 1`] = `
<button
  class="authorization__btn"
>
  Login
</button>
`;

exports[`Login component tests Main tests 2`] = `
<div
  class="authorization__header"
>
  Authorization
</div>
`;

exports[`Login component tests Main tests 3`] = `
<input
  placeholder="Enter your email"
  type="text"
  value=""
/>
`;

exports[`Login component tests Main tests 4`] = `
<input
  placeholder="Enter your password"
  type="password"
  value=""
/>
`;

exports[`Login component tests Main tests 5`] = `
<button
  class="authorization__btn"
>
  Login
</button>
`;
